--- a/web/demo/stylesheets/style.css
+++ b/web/demo/stylesheets/style.css
@@ -74,6 +74,8 @@ body:before {
 .adminButton {background: url(../images/icons/setup.png) no-repeat left 0px;}
 .studentsButton {background: url(../images/icons/token_dark_full.png) no-repeat left 0px; background-position: -38px -258px;}
 .psicoButton {background: url(../images/icons/psico.jpg) no-repeat left 0px;margin-right: 0px; margin-top: 2px; width: 18px;}
+.religionButton {background: url(../images/icons/religion.png) no-repeat left 0px;margin-right: 0px; margin-top: 2px; width: 18px;}
+.emergencyButton {background: url(../images/icons/emergency.png) no-repeat left 0px;margin-right: 0px; margin-top: 2px; width: 18px;}
 
 /*KPaginator Style*/
 .pagination {
