--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -100,7 +100,7 @@
                             </li>
 
                             <li class="has-submenu">
-                                <a href="{{ path('_expediente_report_students_routes') }}">
+                                <a href="#">
                                     {% trans %}label.qualifications{% endtrans %}</a>
                                 <ul>
                                     <li><a href="{{ path('_expediente_report_period_notes_by_group') }}">{% trans %}menu.qualifications.report{% endtrans %}</a></li>
