--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -151,7 +151,7 @@
                             <li><a href="{{ path('_expediente_sysadmin_grade') }}">{% trans %}label.grade{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_course') }}">{% trans %}label.course{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_sysadmin_qualifications') }}">{% trans %}label.qualifications{% endtrans %}</a></li>
-
+                            <li><a href="{{ path('_expediente_sysadmin_questionnaires') }}">{% trans %}label.questionnaires.config{% endtrans %}</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
