--- a/web/saintmichael/stylesheets/style.css
+++ b/web/saintmichael/stylesheets/style.css
@@ -56,7 +56,7 @@ body:before {
     box-shadow:         0 1px 2px rgba(0,0,0,0.25), inset 0 0 3px #fff;
 }
 .tableRow{border-bottom: 1px solid #DDD;}
-.tableRowOdd{border-bottom: 1px solid #FBF9F9; background: #f9f9f9;}
+.tableRowOdd{border-bottom: 1px solid #FBF9F9; background: #CFCFD0;}
 .row:hover{background-color: palegoldenrod;}
 .row a{ margin-right:0px}
 .option_width{height:18px;}
